2010-04-01  Andreas Schwab  <schwab@linux-m68k.org>

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Use buffer-file-coding-system
	if set.

2010-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-add-meta-html-tag): Fix regexp matching meta tag.

2010-03-27  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-default-mail-headers):
	(message-default-headers): Carry the value mail-default-headers over
	into message-default-mail-headers, rather than message-default-headers.

2010-03-22  Juanma Barranquero  <lekktu@gmail.com>

	* message.el (message-interactive): Doc fix.
	(message-qmail-inject-args): Reflow.
	(message-kill-to-signature): Fix typo in docstring.

	* smiley.el (smiley-buffer): Fix typo in docstring.

2010-02-26  Glenn Morris  <rgm@gnu.org>

	* message.el (message-send-mail-function): Change the default, so that
	it inherits from a customized send-mail-function.  (Bug#5643)

2010-02-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-treat-display-x-face): Don't burp if
	shell-command-to-string signals an error (bug#5299).

2010-02-24  Glenn Morris  <rgm@gnu.org>

	* message.el (message-smtpmail-send-it)
	(message-send-mail-with-mailclient): Doc fixes.

2010-02-16  Glenn Morris  <rgm@gnu.org>

	* message.el (message-default-mail-headers): Change the default value
	to ease the transition from mail-mode to message-mode.  (Bug#5555)

2010-01-17  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-mail): Just pass yank-action on to message-setup.
	(message-setup): Handle (FUN . ARGS) form of yank-action.
	(message-with-reply-buffer, message-widen-reply)
	(message-yank-original): Handle non-buffer values of
	message-reply-buffer (Bug#4080).
	(message-setup-1): Prefer to save message-reply-buffer as a buffer.

2010-01-17  Juanma Barranquero  <lekktu@gmail.com>

	* nnmairix.el (nnmairix-group-delete-recreate-this-group):
	Fix typo in docstring.

2010-01-08  Jason Rumney  <jasonr@gnu.org>
